force-app/main/default/objects/Event__c/fields/Case_Safe_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_Safe_Event_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Case Safe Event ID</label>
    <type>Text</type>
</CustomField>