force-app/main/default/objects/Event__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Description of event</inlineHelpText>
    <label>Description</label>
    <length>15000</length>
    <type>Html</type>
</CustomField>