force-app/main/default/objects/Event__c/fields/Groups__c.field-meta.xml
<CustomField>
    <fullName>Groups__c</fullName>
    <inlineHelpText>Used to classify which business this event is for</inlineHelpText>
    <label>Groups</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>G100 Companies</fullName>
            </value>
            <value>
                <fullName>G100 Network</fullName>
            </value>
            <value>
                <fullName>SSA &amp; Company</fullName>
            </value>
            <value>
                <fullName>High Lantern Group</fullName>
            </value>
            <value>
                <fullName>The Mile Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>