force-app/main/default/objects/Event__c/fields/Host_Information__c.field-meta.xml
<CustomField>
    <fullName>Host_Information__c</fullName>
    <inlineHelpText>Venue/Host Info</inlineHelpText>
    <label>Host Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>