force-app/main/default/objects/Event__c/fields/Invited_Pre_Dinner_del__c.field-meta.xml
<CustomField>
    <fullName>Invited_Pre_Dinner_del__c</fullName>
    <label>Invited Pre-Dinner</label>
    <summaryFilterItems>
        <field>Event_Members__c.Pre_Dinner_Role__c</field>
        <operation>equals</operation>
        <value>Invited Guest, Invited Member, Invited Prospect, Invited Speaker, Cancelled, No Show, Not Attending</value>
    </summaryFilterItems>
    <summaryForeignKey>Event_Members__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>