force-app/main/default/objects/Event__c/fields/Num_of_Speaker_Seats__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Speaker_Seats__c</fullName>
    <label># of Speaker Seats</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>