force-app/main/default/objects/Event__c/fields/Public_Location__c.field-meta.xml
<CustomField>
    <fullName>Public_Location__c</fullName>
    <label>Public Location</label>
    <length>144</length>
    <type>Text</type>
</CustomField>