force-app/main/default/objects/Event__c/fields/Seats_for_Dinner_del__c.field-meta.xml
<CustomField>
    <fullName>Seats_for_Dinner_del__c</fullName>
    <label>Seats for Dinner</label>
    <summaryFilterItems>
        <field>Event_Members__c.Dinner_Role__c</field>
        <operation>notEqual</operation>
        <value>Invited Guest, Invited Member, Invited Prospect, Invited Speaker, Not Attending, Not Invited,, CHRO - Not Attending</value>
    </summaryFilterItems>
    <summaryForeignKey>Event_Members__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>