force-app/main/default/objects/Event__c/fields/Sub_Group__c.field-meta.xml
<CustomField>
    <fullName>Sub_Group__c</fullName>
    <label>Sub Group</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Groups__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>G100</fullName>
            </value>
            <value>
                <fullName>NGL</fullName>
            </value>
            <value>
                <fullName>TC</fullName>
            </value>
            <value>
                <fullName>WLA</fullName>
            </value>
            <value>
                <fullName>BX</fullName>
            </value>
            <value>
                <fullName>WLN</fullName>
            </value>
            <value>
                <fullName>Cyber</fullName>
            </value>
            <value>
                <fullName>Exec Network</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>