force-app/main/default/objects/Event__c/fields/Total_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Total_Attendees__c</fullName>
    <label>Total Attendees</label>
    <summaryForeignKey>Event_Members__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>