force-app/main/default/objects/Event__c/fields/Total_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Total_Cancelled__c</fullName>
    <label>Total Cancelled/No Show</label>
    <summaryFilterItems>
        <field>Event_Members__c.Attendance_Status__c</field>
        <operation>notEqual</operation>
        <value>Attending</value>
    </summaryFilterItems>
    <summaryForeignKey>Event_Members__c.Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>