force-app/main/default/objects/Event__c/recordTypes/G100_Companies_Event.recordType-meta.xml
<RecordType>
    <fullName>G100_Companies_Event</fullName>
    <active>true</active>
    <description>Event that could include TMG, G100, HLG and SSA attendees</description>
    <label>G100 Companies Event</label>
</RecordType>