force-app/main/default/objects/Event__c/recordTypes/G100_Network_Event.recordType-meta.xml
<RecordType>
    <fullName>G100_Network_Event</fullName>
    <active>true</active>
    <description>Events for G100, TC, NGL and NEXT</description>
    <label>G100 Network Event</label>
</RecordType>