force-app/main/default/objects/Event__c/recordTypes/HLG_Event.recordType-meta.xml
<RecordType>
    <fullName>HLG_Event</fullName>
    <active>true</active>
    <description>High Lantern Group Event</description>
    <label>HLG Event</label>
</RecordType>