force-app/main/default/objects/Event__c/recordTypes/SSA_Event.recordType-meta.xml
<RecordType>
    <fullName>SSA_Event</fullName>
    <active>true</active>
    <description>Six Sigma Event</description>
    <label>SSA Event</label>
</RecordType>