force-app/main/default/objects/Event__c/listViews/Board_Excellence_Events.listView-meta.xml
<ListView>
    <fullName>Board_Excellence_Events</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sub_Group__c</field>
        <operation>equals</operation>
        <value>BX</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>BX</value>
    </filters>
    <label>BX Events</label>
</ListView>