force-app/main/default/objects/Event__c/listViews/G100_Events.listView-meta.xml
<ListView>
    <fullName>G100_Events</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>Sub_Group__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>G100 -</value>
    </filters>
    <label>G100 Events</label>
</ListView>