force-app/main/default/objects/Event__c/listViews/G100EU_Events.listView-meta.xml
<ListView>
    <fullName>G100EU_Events</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>G100EU</value>
    </filters>
    <label>G100EU Events</label>
</ListView>