force-app/main/default/objects/Event__c/listViews/Next_Events.listView-meta.xml
<ListView>
    <fullName>Next_Events</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Next</value>
    </filters>
    <label>Next Events</label>
</ListView>