force-app/main/default/objects/Event__c/listViews/SSA_Events.listView-meta.xml
<ListView>
    <fullName>SSA_Events</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>SSA</value>
    </filters>
    <label>SSA Events</label>
</ListView>