force-app/main/default/objects/Event__c/listViews/TA_Events.listView-meta.xml
<ListView>
    <fullName>TA_Events</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sub_Group__c</field>
        <operation>equals</operation>
        <value>TC</value>
    </filters>
    <filters>
        <field>Groups__c</field>
        <operation>equals</operation>
        <value>G100 Network</value>
    </filters>
    <label>TC Events</label>
</ListView>