force-app/main/default/objects/Event__c/listViews/TLN_Events.listView-meta.xml
<ListView>
    <fullName>TLN_Events</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sub_Group__c</field>
        <operation>equals</operation>
        <value>Exec Network</value>
    </filters>
    <label>TLN Events</label>
</ListView>