force-app/main/default/objects/Event__c/listViews/WLA_Events.listView-meta.xml
<ListView>
    <fullName>WLA_Events</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>WLA</value>
    </filters>
    <label>WLA Events</label>
</ListView>