force-app/main/default/objects/Event__c/listViews/WLN_Events.listView-meta.xml
<ListView>
    <fullName>WLN_Events</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sub_Group__c</field>
        <operation>equals</operation>
        <value>WLN</value>
    </filters>
    <label>WLN Events</label>
</ListView>